# magix3d

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-linux-ubuntu22.04-icelake-by6z7fp  ceaDocMagix3d.tar  cg-dependencies.dot  generate_import.py  generate_import_250.py
Docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  mystyle.yaml  variables.py.in
Docs/_ext/: magix.py
Docs/_static/: custom.css
Docs/pages/: annexes.rst  api-python.rst  barre-boutons.rst  barre-notification.rst  commandes-python.rst  conventions-reperes.rst  dev-mgx.rst  generation3d.rst  gestion-entites.rst  glossaire.rst  historique.rst  lancement.rst  manuel-utilisateur.rst  menu-aide.rst  menu-chambre-experimentale.rst  menu-maillage.rst  menu-outils.rst  menu-projet.rst  menu-selection.rst  menu-session.rst  menu-topologie.rst  menu-vue.rst  menus.rst  methodologie.rst  modification-aspect.rst  onglet-historique.rst  onglet-moniteur.rst  onglet-proprietes.rst  onglets.rst  operations-description.rst  operations-geometriques.rst  operations-maillage.rst  operations-reperes.rst  operations-topologiques.rst  operations.rst  outils.rst  preferences.rst  raccourcis.rst  selection.rst  substitution-images.rst  (+9 more)
Docs/resources/: 2boitesAvecRecouvrement.py  2boitesConformes.py  cavite.mdl  cavite_tel.py  cylindreOr.mdl  cylindreOreille.py
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Geom/: .GeomEntity.cpp.swp  CommandCommon.cpp  CommandCommon2D.cpp  CommandCreateGeom.cpp  CommandCut.cpp  (+138 more)
src/GMSH/: CMakeLists.txt
src/Magix3D/: CMakeLists.txt  Magix3D.doxygen  main.cpp
src/Magix3DBatch/: CMakeLists.txt  Magix3DBatch.cpp  Magix3DBatch.doxygen
src/QtComponents/: CMakeLists.txt  EntitySeizureManager.cpp  Qt2VerticiesPanel.cpp  Qt3DGraphicalWidget.cpp  Qt3VerticiesPanel.cpp  QtAngleMeasurementOperationAction.cpp  QtAnglePanel.cpp  QtArcCircleOperationAction.cpp  QtAxisPanel.cpp  QtBlockAssociationAction.cpp  QtBlockMeshingPropertyAction.cpp  QtBlocksByExtrusionCreationAction.cpp  QtBlocksByRevolutionCreationAction.cpp  QtBlocksOptionsDialog.cpp  QtBooleanOpOperationAction.cpp  QtBoxOperationAction.cpp  QtCGNSOptionsDialog.cpp  QtCircleOperationAction.cpp  QtColorTablesEditorDialog.cpp  QtCommandMonitorDialog.cpp  QtCommandMonitorPanel.cpp  QtComponents.qrc  QtConeOperationAction.cpp  QtCurveByProjectionOnSurfaceAction.cpp  QtCurvilinearAbscissaPanel.cpp  QtCylinderOperationAction.cpp  QtDimensionsSelectorPanel.cpp  QtDistanceMeasurementOperationAction.cpp  QtEdgeMeshingPropertyAction.cpp  QtEntitiesItemViewPanel.cpp  QtEntitiesPanel.cpp  QtEntityByDimensionSelectorPanel.cpp  QtEntityIDTextField.cpp  QtExpansionTreeRestorer.cpp  QtExtremaMeshingEdgeLengthOnEdgeAction.cpp  QtExtrusionAction.cpp  QtFaceMeshingPropertyAction.cpp  QtGeomAddToGroupOperationAction.cpp  QtGeomEntityByRevolutionCreationAction.cpp  QtGeomEntityCommon2DOperationAction.cpp  (+109 more)
src/QtVtkComponents/: CMakeLists.txt  QtVtkGraphicalWidget.cpp  QtVtkMgx3DApplication.cpp  QtVtkMgx3DExperimentalRoomPanel.cpp  QtVtkMgx3DMainWindow.cpp  QtVtkRepresentationTypesDialog.cpp  QtVtkWidget.cpp  VTKConfiguration.cpp  VTKECMPicker.cpp  VTKECMPickerCommand.cpp  VTKECMSelectionManager.cpp  VTKEntityRepresentation.cpp  VTKGMDSEntityRepresentation.cpp  VTKGraphicalRepresentationFactory.cpp  VTKMgx3DActor.cpp  VTKMgx3DEntityRepresentation.cpp  VTKMgx3DGeomEntityRepresentation.cpp  VTKMgx3DMeshEntityRepresentation.cpp  VTKMgx3DPicker.cpp  VTKMgx3DPickerCommand.cpp  VTKMgx3DSelectionManager.cpp  VTKMgx3DStructuredMeshEntityRepresentation.cpp  VTKMgx3DSysCoordEntityRepresentation.cpp  VTKMgx3DTopoEntityRepresentation.cpp  VTKRenderingManager.cpp  VTKSelectionManagerDimFilter.cpp  vtkCustomizableInteractorStyleTrackball.cpp  vtkMgx3DInteractorStyle.cpp  vtkUnifiedInteractorStyle.cpp
src/Triton2/: CMakeLists.txt  TetgenFacade.cpp
src/Utils/: Bounds.cpp  CMakeLists.txt  Command.cpp  CommandException.cpp  CommandIfc.cpp  CommandManager.cpp  CommandManagerIfc.cpp  CommandResult.cpp  CommandResultIfc.cpp  CommandRunner.cpp  Common.cpp  DefaultGraphicalRepresentationFactory.cpp  DisplayProperties.cpp  DisplayRepresentation.cpp  Entity.cpp  GraphicalEntityRepresentation.cpp  Handle.cpp  Landmark.cpp  Log.cpp  Matrix33.cpp  MgxNumeric.cpp  MgxText.cpp  MgxThreadedTaskManager.cpp  MutexUnlocker.cpp  Plane.cpp  Point.cpp  Property.cpp  Rotation.cpp  SelectionManager.cpp  SelectionManagerDimFilter.cpp  SelectionManagerIfc.cpp  SerializedRepresentation.cpp  TypeDedicatedNameManager.cpp  UndoRedoManager.cpp  UndoRedoManagerIfc.cpp  Unit.cpp  ValidatedField.cpp
src/VtkComponents/: CMakeLists.txt  vtkDMAMultiProcessStream.cpp  vtkDMAParallelRenderManager.cpp  vtkDMASynchronizedOpenGLRenderWindow.cpp  vtkDMASynchronizedRenderers.cpp  vtkECMAreaPicker.cpp  vtkECMExtractSelectedFrustum.cpp  vtkECMFactory.cpp  vtkECMXOpenGLRenderWindow.cpp  vtkLockableRenderWindow.cpp  vtkPolyDataRefinementFilter.cpp  vtkUnixClientSocket.cpp  vtkUnixServerSocket.cpp  vtkUnstructuredGridRefinementFilter.cpp  vtkXLockableRenderWindow.cpp
src/etc/: magix3d.xml  magix3d_patchs.xml  remote_magix3d.xml
src/pyMagix3D/: CMakeLists.txt  M3DPythonSession.cpp  pyMagix3D.doxygen  pyMagix3D.i  swig.xsl  swig_doc.i
test_link/: .gitignore  B0.step  CMakeLists.txt  README.md  coord_comp.py  cube_sphere.step  ex1.iges  issue72.py  issue96.py  log1  log2  pytest.ini  test_aero.py  test_align_vertices.py  test_arc_circle.py  test_beta_shrinkage_law.py  test_bounding_box.py  test_boxes.py  test_brep.py  test_command_edit_geom.py  test_cross_cells.py  test_curve_on_surf_proj.py  test_curve_revol.py  test_curves_fuse.py  test_curves_fuse2.py  test_demi_sphere.py  test_description.py  test_description_crb0000.txt  test_description_pt0000.txt  test_description_surf0000.txt  test_description_vol0000.txt  test_edge_interpolate.py  test_export_cgns.py  test_export_vtk.py  test_extern_gmsh.py  test_extrusion.py  test_free_bounded_topo.py  test_generate_import_methods.py  test_geom_box.py  test_geom_step.py  (+78 more)
test_link/data/: half_sphere_250.mgxt  half_sphere_260.mgxt
(+938 files in other folders)
